src/objects/SMM_Product__c.object
<CustomObject>
    <fields>
        <fullName>Design_Instructions__c</fullName>
        <description>This is used to enter the design instructions for the campaign profile.</description>
        <label>Design Instructions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Page_URL__c</fullName>
        <label>Facebook Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Email__c</fullName>
        <label>Lead Capture Email</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Voice__c</fullName>
        <label>Social Voice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Based</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Fun</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Helpful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Gender__c</fullName>
        <label>Targeted Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>